fix: checkboxes got too big

--- a/static/css/components/auto_complete_fields.css
+++ b/static/css/components/auto_complete_fields.css
@@ -4,12 +4,6 @@
     width: 100%;
 }
 
-input {
-    border: 1px solid transparent;
-    padding: 10px;
-    font-size: 16px;
-}
-
 input[type=text] {
     width: 100%;
 }
